--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,13 +31,13 @@
     "react-scripts": "^5.0.1",
     "wagmi": "^0.12.2",
     "web-vitals": "^2.1.4",
-    "vite": "^4.2.0",
     "zlib": "^1.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
-    "@vitejs/plugin-react-swc": "^3.0.0"
+    "@vitejs/plugin-react-swc": "^3.0.0",
+    "vite": "^4.2.0"
   },
   "eslintConfig": {
     "extends": [
